# PowerSession-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  a.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-winget  release.yml  rs-release.yml  rust.yml
commands/: Cargo.toml
commands/src/: auth.rs  lib.rs  play.rs  record.rs  types.rs  upload.rs
commands/src/api/: asciinema.rs
commands/testdata/: play.txt
src/: main.rs
src/commands/: Cargo.toml  auth.rs  mod.rs  play.rs  record.rs  stream.rs  types.rs  upload.rs
src/commands/api/: asciinema.rs  mod.rs
src/terminal/: mod.rs
src/terminal/impl_win/: mod.rs  process.rs  terminal.rs
terminal/: Cargo.toml  build.rs
terminal/src/: lib.rs  windows.rs
terminal/src/impl_win/: process.rs  terminal.rs
terminal/src/windows/: mod.rs  process.rs  terminal.rs
testdata/: play.txt  play_v1.json  play_with_stdin.txt
