[package]
name = "commands"
version = "0.1.0"
authors = ["Yuwei B <i@xiaoba.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal = { path = "../terminal" }

platform-dirs = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.1.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

reqwest = { version = "0.11.10", features = ["blocking", "multipart"] }

rustc_version_runtime = "0.2.1"
os_info = "3"
base64 = "0.13.0"