[package]
name = "terminal"
version = "0.1.0"
authors = ["Yuwei B <i@xiaoba.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[cfg(windows)]
windows = "0.19.0"

[build-dependencies]
#[cfg(windows)]
windows = "0.19.0"