[package]
name = "terminal"
version = "0.1.0"
authors = ["Yuwei B <i@xiaoba.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[cfg(windows)]
windows = {git = "https://github.com/microsoft/windows-rs.git", branch="master"}

[build-dependencies]
#[cfg(windows)]
windows = {git = "https://github.com/microsoft/windows-rs.git", branch="master"}
