[package]
name = "terminal"
version = "0.1.0"
authors = ["Yuwei B <i@xiaoba.me>"]
edition = "2018"


[dependencies]
#[cfg(impl_win)]
windows = {git = "https://github.com/microsoft/windows-rs.git", version = "0.37.0", features=[
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_WindowsProgramming",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]}

